MonetDB/src/mal/Tests/tst802.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## using spaces
#
#u:str:=const.take("user");
#printf("User bound to %s\n",u);
#
#v:int:= take("roomnumber");
#
#v:= 123;
#v:= v+1;
#release("roomnumber",v);
#release("roomnumber",v); # failure? done twice or implicit take?
#
function Admin.main():int;	#0:void (main:int)
	u := const.take("user");	#1:str (u:str)($2:str)
	system.printf("User bound to %s\n",u);	#2:int ($3:int)($4:str)(u:str)
	v := take("roomnumber");	#3:int (v:int)($6:str)
	v := 123;	#4:int (v:int)($7:int)
	v := calc.+(v,1);	#5:int (v:int)(v:int)($8:int)
	const.release("roomnumber",v);	#6:oid ($9:void)($6:str)(v:int)
	const.release("roomnumber",v);	#7:oid ($10:void)($6:str)(v:int)
end function;	#8:void 
User bound to Admin
!ERROR: boxException:Admin.main[3]:roomnumber:failed to take from box

>